@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.7 2004/09/01 12:12:14 recht Exp $
+$NetBSD: distinfo,v 1.8 2004/10/21 21:27:29 xtraeme Exp $
 
-SHA1 (sylpheed-0.9.12-gtk2-20040622.tar.gz) = ba20a927ebd8ee6442cbebc9433c599bf9cf814e
-Size (sylpheed-0.9.12-gtk2-20040622.tar.gz) = 3375655 bytes
+SHA1 (sylpheed-0.9.12-gtk2-20040918.tar.gz) = ab9c7ca3c49b86077c257bae4f44943c537516be
+Size (sylpheed-0.9.12-gtk2-20040918.tar.gz) = 3377968 bytes
